[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_flipthedog"
version = "0.0.1"
authors = [
  { name="Floris", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/flipthedog/packaging"
"Bug Tracker" = "https://github.com/flipthedog/packaging/issues"